--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^19.2.19",
     "@angular/common": "~19.2.0",
     "@angular/compiler": "~19.2.0",
     "@angular/core": "~19.2.0",
+    "@angular/fire": "^19.2.0",
     "@angular/forms": "~19.2.0",
+    "@angular/material": "^19.2.19",
     "@angular/platform-browser": "~19.2.0",
     "@angular/platform-browser-dynamic": "~19.2.0",
     "@angular/router": "~19.2.0",
+    "firebase": "^11.10.0",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   },
