--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
+# Firebase
+.firebase/
+hosting.*
+
 # compiled output
 dist
 tmp
